<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="215dp"
    android:layout_marginTop="16dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cr"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="center"
            android:src="@drawable/card" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/uzCardIcon"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/ic_uzcard"
        app:layout_constraintEnd_toEndOf="@id/canvas"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/canvas" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/bankIcon"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="16dp"
        android:elevation="16dp"
        android:src="@drawable/n"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/canvas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="12dp"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/shape_card"
        android:elevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/bankIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/amountOfMoney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:elevation="16dp"
        android:text="@string/_0_00_uzs"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/canvas"
        app:layout_constraintTop_toBottomOf="@id/uzCardIcon" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/cardNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:elevation="16dp"
        android:text="@string/_8600_02_9558"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/userName"
        app:layout_constraintStart_toStartOf="@id/canvas"
        app:layout_constraintTop_toBottomOf="@id/amountOfMoney" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/userName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:elevation="16dp"
        android:text="@string/xusanov_pirmuhammad"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/canvas"
        app:layout_constraintStart_toStartOf="@id/canvas" />
</androidx.constraintlayout.widget.ConstraintLayout>